--- a/first-steps-to-open-source/index.html
+++ b/first-steps-to-open-source/index.html
@@ -10,16 +10,16 @@
 <p>Then I waited.</p>
 <p>And waited.</p>
 <h2>Good things…</h2>
-<p>In hindsight, that issue was not a great first pick. It already had some attempts, with the most recent just over a week from when I made the PR. I think I was just so unsure of myself, I wanted to try it anyway to see if I could actually do this thing. If I screwed it up, there were already a few attempts anyhow.</p>
-<p>In the end, one of the maintainers took it upon himself to close the issue and credited all the contributors. His PR was really a lot better, so I guess it was a way of navigating this long-drawn issue without stepping on any toes.</p>
+<p>In hindsight, that issue was not a great first pick. It already had some attempts, with the most recent just a week before my PR. I think I was so unsure of myself, I figured this would be a super low-risk issue to try. After all, if I screwed it up, there were other attempts that could be picked up.</p>
+<p>In the end, one of the maintainers took it upon himself to close the issue and credited all the contributors. His PR was better, but I guess it was mainly a way of navigating this long-drawn issue without stepping on any toes.</p>
 <p>While waiting, I decided to try again. We were using a <a href="https://github.com/99designs/iamy">tool</a> written in Go to manage our AWS IAM at work, but there was a good-to-have feature we wanted and an issue for it. So I spent a few week nights and weekends learning Go, doing up the <a href="https://github.com/99designs/iamy/pull/69">PR</a> and submitting it.</p>
 <p>Then I waited.</p>
 <h2>…come to those…</h2>
 <p>And someone reviewed! I was energised. I made some changes.</p>
 <p>Then he requested a second opinion from another maintainer.</p>
 <p>It’s still there, open.</p>
-<p>At this point I was starting to get disheartened. No hate to open source maintainers, it’s pretty thankless work and the world is better for your contributions.</p>
-<h2>…who wait.</h2>
+<p>At this point I was starting to get disheartened. (No hate to open source maintainers, it’s pretty thankless work and the world is better for your contributions.)</p>
+<h2>…who <del>wait</del> keep trying.</h2>
 <p>I flapped around a bit, and one day decided to look at another gem our company had been using. I saw a pretty steady stream of merges, neatly labelled issues, plus it just felt less intimidating than Rails.</p>
 <p>A few days later, my <a href="https://github.com/slack-ruby/slack-ruby-bot/pull/244">first merge</a>! I was elated.</p>
 <p><span
